# stdBLAS

./: .gitignore  CMakeLists.txt  README.md  azure-pipelines.yml
.github/workflows/: cmake.yml
compilation_tests/: ctest_common.hpp
examples/: 01_scale.cpp  02_matrix_vector_product_basic.cpp  03_matrix_vector_product_mixedprec.cpp  CMakeLists.txt
include/experimental/: linalg
include/experimental/__p1673_bits/: blas2_matrix_vector_solve.hpp  blas3_matrix_product.hpp  conjugate_if_needed.hpp  conjugated.hpp  layout_tags.hpp  macros.hpp  maybe_static_size.hpp  packed_layout.hpp  scaled.hpp  transposed.hpp
pipelines/: jobs-linux.yml  jobs-macos.yml
tests/: CMakeLists.txt
tests/kokkos-based/: CMakeLists.txt
tests/native/: CMakeLists.txt  conjugated.cpp  gtest_fixtures.hpp  herk.cpp  iterator.cpp
